--- a/quorumitclient/pom.xml
+++ b/quorumitclient/pom.xml
@@ -41,6 +41,10 @@
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.hazelcast</groupId>
+            <artifactId>echo-task</artifactId>
+        </dependency>
     </dependencies>
     
     <build>
